--- a/khron_brownie/brownie-config.yaml
+++ b/khron_brownie/brownie-config.yaml
@@ -6,6 +6,6 @@ compiler:
   solc:
     remappings:
       - "@khronus/khronus-client@0.0.4=khronus-project/khronus_client@0.0.4"
-      - "@khronus/time-cog@1.0.2=khronus-project/khronus_timeCog@1.0.2"
+      - "@khronus/time-cog@1.0.2=/Users/danielherrera/.brownie/packages/khronus-project/khronus_timeCog@1.0.2"
 source networks:
   default: local
